--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,12 @@ include(CMakePrintHelpers)
 cmake_minimum_required(VERSION 3.20.0)
 project(Compiladores)
 
-set(CMAKE_BUILD_TYPE Release)
+# set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-file(GLOB src_files "${PROJECT_SOURCE_DIR}/src/*")
+file(GLOB src_files ${PROJECT_SOURCE_DIR}/src/*)
 
 # cmake_print_variables(PROJECT_SOURCE_DIR)
 cmake_print_variables(src_files)
