--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ BISON_TARGET(PARSER ${CMAKE_CURRENT_SOURCE_DIR}/src/parser.y ${CMAKE_CURRENT_BIN
 # FLEX_TARGET(MyScanner ${CMAKE_CURRENT_SOURCE_DIR}/src/lexico.l)
 ADD_FLEX_BISON_DEPENDENCY(LEXER PARSER)
 
-# include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/src)
+include_directories(${PROJECT_SOURCE_DIR}/include)
 add_executable(a ${BISON_PARSER_OUTPUTS} ${FLEX_LEXER_OUTPUTS})
 # target_sources(MyScanner PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 # include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
